# pictool

./: .gitignore  PIC.py  README.md  main.py  pyproject.toml
pictool/: __main__.py
